build: delete deprecated jvm option